Replace all documentation with comprehensive M2.1 content
Map 135 pages from deeplearning4j-docs/docs/m2.1/ into the Diataxis
structure used by GitBook:

- core-concepts (7 pages) → multi-project/explanation/
- nd4j (23 pages) → nd4j/ tutorials, how-to-guides, reference
- deeplearning4j nn/nlp/ui (40 pages) → deeplearning4j/ reference, tutorials, how-to-guides
- datavec (15 pages) → datavec/reference/
- model-import/keras (22 pages) → deeplearning4j/how-to-guides/keras-import/
- model-import/samediff+tf+onnx+tvm (9 pages) → samediff/how-to-guides/ + nd4j/how-to-guides/other-framework-interop/
- python4j (4 pages) → python4j/
- scaleout/spark (7 pages) → spark/
- config (8 pages) → multi-project/explanation/configuration/
- arbiter (4 pages) → multi-project/reference/arbiter/ (new)
- omnihub (3 pages) → multi-project/reference/omnihub/ (new)

All content targets M2.1 APIs: DataType enum, new Adam(lr) updater
constructors, org.nd4j.evaluation packages, Activation enum.